--- a/package.json
+++ b/package.json
@@ -11,25 +11,34 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
-    "@react-navigation/stack": "^6.0.9",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/yup": "^0.29.13",
     "axios": "^0.22.0",
     "dayjs": "^1.10.7",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-date-picker": "^4.1.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^13.0.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
     "react-redux": "^7.2.5",
     "redux-persist": "^6.0.0",
-    "yup": "^0.32.9"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/md5": "^2.3.1",
     "@types/react-native": "^0.65.0",
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^17.0.1",
