--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux-persist": "^6.0.0",
     "yup": "^0.32.11"
@@ -40,6 +42,7 @@
     "@types/jest": "^26.0.23",
     "@types/md5": "^2.3.1",
     "@types/react-native": "^0.65.0",
+    "@types/react-native-vector-icons": "^6.4.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
