--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-toast-message": "^1.6.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux-persist": "^6.0.0",
+    "rn-placeholder": "^3.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
