Update tên app + icon

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'ReactNativeCvfree' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'ReactNativeCvfreeTests' do
     inherit! :complete
     # Pods for testing
