--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactnativecvfree",
-  "version": "20211026.10.35",
+  "version": "20211026.17.35",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -29,6 +29,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-toast-message": "^1.6.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
