--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactnativecvfree",
-  "version": "20211026.17.35",
+  "version": "20211101.16.26",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
@@ -23,9 +24,13 @@
     "md5": "^2.3.0",
     "react": "17.0.2",
     "react-native": "0.66.0",
-    "react-native-date-picker": "^4.1.0",
+    "react-native-dropdown-picker": "^5.2.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.4",
+    "react-native-image-picker": "^4.1.2",
     "react-native-modal": "^13.0.0",
+    "react-native-modal-datetime-picker": "^13.0.0",
+    "react-native-permissions": "^3.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
@@ -49,6 +54,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
