--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactnativecvfree",
-  "version": "20211101.16.26",
+  "version": "20211102.09.31",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-image-picker": "^4.1.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-permissions": "^3.1.0",
