Thêm màn job detail

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ target 'ReactNativeCvfree' do
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'ReactNativeCvfreeTests' do
     inherit! :complete
     # Pods for testing
