--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.22.0",
     "dayjs": "^1.10.7",
     "formik": "^2.2.9",
+    "galaxy-utility": "0.0.2",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "react": "17.0.2",
