--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "dayjs": "^1.10.7",
     "formik": "^2.2.9",
     "galaxy-utility": "0.0.2",
+    "i18next": "^21.4.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "react": "17.0.2",
+    "react-i18next": "^11.13.0",
     "react-native": "0.66.0",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-gesture-handler": "^1.10.3",
@@ -64,6 +66,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
+    "redux-logger": "^3.0.6",
     "typescript": "^3.8.3"
   },
   "resolutions": {
